--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,15 +6,22 @@ html{
 *::after{
     box-sizing: inherit;
 }
-ul{
+ul,
+li{
     padding: 0;
     margin: 0;
-}
-li{
     list-style: none;
 }
 a{
     text-decoration: none;
+    display: inline-block;
+    color: $text;
+}
+body{
+    font-family: 'Roboto-Regular' , sans-serif;
+    font-size: 15px;
+    line-height: 24px;
+    color: $text;
 }
 .container{
     max-width: 1200px;
