--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,7 +1,59 @@
-@import 'Sass_extends/fonts';
-@import 'Sass_extends/mixsins';
-@import 'Sass_extends/vars';
-@import 'Sass_extends/global';
+@import 'fonts';
+@import 'mixsins';
+@import 'vars';
+@import 'global';
+
+
+.header__top-inner {
+    display: flex;
+    justify-content: space-between;
+    height: 90px;
+    align-items: center;
+}
+.header__text {
+    margin-left: auto;
+    margin-right: 50px;
+    span{
+        color: $red;
+    }
+}
+.header__btn{
+    padding: 4px;
+    width: 72px;
+    border-radius: 4px;
+    text-align: center;
+    color: #fff;
+    font-size: 12px;
+}
+.header__btn-login{
+    background-color: $green;
+}
+
+.header__btn-register {
+    background-color: $red;
+    margin-left: 7px;
+}
+.header__menu{
+    background-color: $bg;
+}
+.menu{
+    height: 60px;
+    display: flex;
+    align-items: center;
+}
+.menu-list{
+    li{
+        display: inline-block;
+        & + li{
+            margin-left: 30px;
+        }
+    }
+    a{
+        font-size: 14px;
+        font-weight: 500;
+        color: #fff;
+    }
+}
 
 
 
@@ -16,12 +68,4 @@
 
 
 
-
-
-
-
-
-
-
-
-@import 'Sass_extends/media'
+@import 'media'
