--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -54,11 +54,58 @@
         color: #fff;
     }
 }
-
-
-
-
-
+.search{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 533px;
+}
+.search__inner{
+    padding-top: 160px;
+    padding-bottom: 100px;
+    color: #fff;
+    text-align: center;
+}
+.search__inner-title {
+    font-size: 48px;
+    font-weight: 700;
+    margin-bottom: 18px;
+    line-height: 72px;
+}
+.search__inner-text {
+    font-weight: 500;
+    font-size: 20px;
+    margin-bottom: 50px;
+    line-height: 30px;
+}
+.search__inner-form {
+    max-width: 670px;
+    margin: 0 auto;
+    position: relative;
+    input{
+        height: 56px;
+        display: block;
+        width: 100%;
+        border-radius: 4px;
+        box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+        border: none;
+        font-size: 14px;
+        font-weight: 500;
+        padding-left: 25px;
+        padding-right: 60px;
+        &::placeholder{
+            color: #90a4ae;
+            font-weight: 500;
+        }
+    }
+    button{
+        position: absolute;
+        border: none;
+        background: transparent;
+        right: 20px;
+        top: 16px;
+    }
+}
 
 
 
