--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,7 @@
 @import 'vars';
 @import 'global';
 
-
+// start header
 .header__top-inner {
     display: flex;
     justify-content: space-between;
@@ -54,6 +54,9 @@
         color: #fff;
     }
 }
+
+// end header
+// start search
 .search{
     background-repeat: no-repeat;
     background-size: cover;
@@ -104,11 +107,128 @@
         background: transparent;
         right: 20px;
         top: 16px;
+        cursor: pointer;
+    }
+}
+// end search
+// start products
+.products{
+    padding: 110px 0;
+    background-color: $gray;
+}
+.products__inner-box{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.products__inner-btn{
+    text-align: center;
+    margin-bottom: 60px;
+    button{
+        font-weight: 500;
+        color: $bg;
+        font-size: 14px;
+        padding: 12px 21px;
+        border: none;
+        background-color: #fff;
+        cursor: pointer;
+        & + button{
+            margin-left: 5px;
+        }
+        &.mixitup-control-active{
+            background-color: $red;
+            color: #fff;
+            outline: none;
+        }
+    }
+}
+.product__item{
+    max-width: 442px;
+    width: 100%;
+    box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);  
+    margin-bottom: 30px;
+    &-img{
+        min-height: 250px;
+        background-repeat: no-repeat;
+        display: block;
+        background-position: center center;
+        background-size: cover;
+    }
+    &-content{
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 30px;
+        min-height: 90px;
+        font-weight: 500;
+        align-items: center;
+        border-bottom: 1px solid #e7ecf2;
+    }
+    &-name{
+        max-width: 310px;
+    }
+    &-title{
+        color: $bg;
+        font-size: 18px;
+        display: block;
+    }
+    &-category{
+        font-size: 14px;
+        color: $green;
+        display: block;
+    }
+    &-price{
+        font-weight: 700;
+        font-size: 20px;
+        color: $bg;
+    }
+    &-info{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        min-width: 70px;
+        padding: 10px 30px;
+    }
+    &-author{
+        display: flex;
+        align-items: center;
+        .avatar{
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+            background-position: center;
+            display: inline-block;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-right: 14px;
+        }
+        span{
+            font-weight: 500;
+            font-size: 14px;
+        }
+    }
+}
+.products__bottom-btn{
+    text-align: center;
+    button{
+        margin: 45px 5px 0;
+        box-shadow: 0px 1px 3px 0px rgba(204, 216, 228, 0.75);
+        border: none;
+        background-color: #fff;
+        color: $bg;
+        padding: 20px 30px;
+        cursor: pointer;
+        &.mixitup-control-active{
+            background-color: $red;
+            color: #fff;
+            outline: none;
+        }
     }
 }
 
 
 
+
+// end products
 
 
 
