--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -353,7 +353,48 @@
         }
     }
 }
-
 // end adventages
+// start author
+.author{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    min-height: 750px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__box{
+        max-width: 650px;
+        min-height: 215px;
+        display: flex;
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        background-color: $green;
+    }
+}
+.author__title{
+    font-size: 30px;
+    line-height: 30px;
+    color: #fff;
+    margin-right: 45px;
+    max-width: 265px;
+    span{
+        @include f700;
+    }   
+}
+.author__link{
+    padding: 14px 40px;
+    font-size: 18px;
+    line-height: 36px;
+    background-color: #fff;
+}
+
+
+// end author
+
+
+
+
 
 @import 'media'
