--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,6 +6,10 @@ html{
 *::after{
     box-sizing: inherit;
 }
+html,
+body {
+	height: 100%;
+}
 ul,
 li{
     padding: 0;
@@ -22,6 +26,17 @@ body{
     font-size: 15px;
     line-height: 24px;
     color: $text;
+}
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
+}
+.content {
+	flex: 1 0 auto;
+}
+.footer {
+	flex: 0 0 auto;
 }
 .container{
     max-width: 1200px;
@@ -49,4 +64,36 @@ body{
 .rate-star{
     display: inline-block;
     margin-right: 13px;
+}
+.page-content{
+    background-color: $gray;
+}
+.breadcrumbs{
+    &__inner{
+        padding: 45px 0 40px;
+    }
+    &__list{
+        li{
+            display: inline-block;
+            position: relative;
+            & + li{
+                padding-left: 24px;
+                &::before{
+                    position: absolute;
+                    content: '-';
+                    left: 8px;
+                    color: $green;
+                }
+            }
+            &:last-child{
+                a,
+                span{
+                    color: $bg;
+                }
+            }
+        }
+        a{
+            color: #b0bec5;
+        }
+    }
 }
