--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,9 @@
 @import 'global';
 
 // start header
+.header{
+    background-color: #fff;
+}
 .header__top-inner {
     display: flex;
     justify-content: space-between;
@@ -62,6 +65,15 @@
     background-size: cover;
     background-position: center;
     min-height: 533px;
+    &.page-search{
+        min-height: 230px;
+        .search__inner{
+            padding: 55px 0 70px;
+            &-text{
+                margin-bottom: 20px;
+            }
+        }
+    }
 }
 .search__inner{
     padding-top: 160px;
@@ -193,7 +205,7 @@
         align-items: center;
         max-width: 245px;
         .avatar{
-            width: 30px;
+            min-width: 30px;
             height: 30px;
             border-radius: 50%;
             background-position: center;
@@ -543,5 +555,342 @@
     }
 }
 // end footer
+// start product-page
+.product-page__inner{
+    display: flex;
+    padding-bottom: 110px;
+}
+.product-page__aside{
+    margin-right: 30px;
+    .product__item{
+        box-shadow: none;
+        margin-bottom: 30px;
+        padding-bottom: 30px;
+        border-bottom: 1px solid #dde3e8;
+        &-img{
+            min-height: 120px;
+        }
+        &-content{
+            padding: 0;
+            min-height: 75px;
+            border-bottom: none;
+        }
+        &-info{
+            padding: 0;   
+            min-height: 0; 
+        }
+        &-title{
+            font-size: 16px;
+        }
+        &-price{
+            font-size: 16px;
+        }
+       
+    }
+    .rate-star{
+        margin-right: 0;
+    }
+    .avatar{
+        margin-right: 9px;
+    }
+    .jq-ry-container{
+        padding: 0;
+    }
+}
+.aside__product-items{
+    .product__item:last-child{
+        border-bottom: none;
+        padding-bottom: 0;
+    }
+    .product__item:first-child{
+        margin-top: 25px;
+    }
+}
+.product__item-startNum{
+    display: none;
+}
+.aside-item{
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0 32px 32px;
+    margin-bottom: 30px;
+    width: 270px;
+}
+.aside__title{
+    border-bottom: 1px solid #dde3e8;
+    font-size: 20px;
+    color: $bg;
+    @include f700;
+    padding: 22px 0 19px;
+}
+.category__list{
+    padding-top: 10px;
+    li{
+        padding: 10px 0;
+        display: flex;
+        justify-content: space-between;
+        padding-left: 20px;
+        position: relative;
+        &::before{
+            font-family: 'icomoon' !important;
+            position: absolute;
+            content: "\f105";
+            left: 0;
+            color: $green;
+            font-size: 18px;
+        }
+    }
+    a{
+        color:$bg;
+    }
+    span{
+        color: #99abb4;
+        margin-left: 10px;
+    }
+}
+.price-range{
+    form{
+        padding-top: 20px;
+        padding-bottom: 25px;
+    }
+    button{
+        margin-top: 55px;
+        background-color: $green;
+        color: #fff;
+        border: none;
+        padding: 16px 10px;
+        text-align: center;
+        @include f500;
+        width: 100%;
+        display: block;
+        cursor: pointer;
+        position: relative;
+        &::before{
+            font-family: 'icomoon' !important;
+            position: absolute;
+            content: "\f002";
+            left: 58px;
+            top: 15px;
+            color: #fff;
+            font-size: 15px;
+        }
+    }
+}
+.irs--flat .irs-line{
+    background-color: #f2f5f8;
+    height: 5px;
+}
+.irs--flat .irs-bar{
+    height: 5px;
+    background-color: $bg;
+}
+.irs--flat .irs-handle{
+    width: 16px;
+    height: 16px;
+    background-color: #fff;
+    border: 4px solid $green;
+    border-radius: 50%;
+    top: 19px;
+}
+.irs--flat .irs-handle>i:first-child{
+    display: none;
+}
+.irs-from, .irs-single, .irs-to{
+    top: 45px;
+}
+.irs--flat .irs-from:before, .irs--flat .irs-single:before, .irs--flat .irs-to:before{
+    display: none;
+}
+.irs--flat .irs-from, .irs--flat .irs-single, .irs--flat .irs-to {
+    color: #78909c;
+    font-size: 15px;
+    line-height: 1.333;
+    text-shadow: none;
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0;
+}
+.top-sellers__link{
+    padding: 16px 10px;
+    display: block;
+    background-color: $green;
+    color: #fff;
+    text-align: center;
+    @include f500;
+}
+.product-page__content {
+    width: 100%;
+    .product__item{
+        transition: all .5s ease;
+        max-width: 270px;
+        background-color: #fff;
+        &-img{
+            min-height: 180px;
+        }
+        &-content{
+            padding: 10px 20px;
+        }
+        &-title{
+            font-size: 16px;
+        }
+        &-info{
+            min-height: 65px;
+            padding: 10px 20px;
+        }
+        .rate-star{
+            margin-right: 5px;
+        }
+        .jq-ry-container{
+            padding: 0;
+        }
+    }
+}
+.product-page__filter {
+    background-color: #fff;
+    border: 1px solid #dedede;
+    padding: 0 20px;
+    margin-bottom: 30px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    button{
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        font-size: 16px;
+        color: #90a4ae;
+        outline: none;
+        &.active{
+            color: $green;
+        }
+    }
+}
+.product-page__filter-sort{
+    color: #707070;
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+}
+button.icon-sort-amount-desc{
+    font-size: 18px;
+    color: #455a64;
+}
+button.icon-unsorted{
+    font-size: 14px;
+    color: #707070;
+}
+.product-page__items{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 3px;
+    flex-wrap: wrap;
+}
+.pagintaion__list{
+    li{
+        display: inline-block;
+        & + li{
+            margin-left: 6px;
+        }
+    }
+    a,
+    span{
+        box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+        width: 43px;
+        height: 38px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        font-size: 16px;
+        @include f500;
+        color: $bg;
+        &.active{
+            background-color: $red;
+            color: #fff;
+        }
+    }
+}
+.product__item-text{
+    display: none;
+}
+.product__item-price{
+    span{
+        display: none;
+    }
+}
+.product__item-list{
+    display: none;
+    .icon-comment-o,
+    .icon-heart-o{
+        color: #70838d;
+        font-size: 12px;
+        display: inline-block;
+        color: $bg;
+        padding-left: 50px;
+        border-left: 1px solid #aeb4bb;
+        position: relative;
+        span{
+            color: $bg;
+            @include f500;
+        }
+        &::before{
+            font-size: 16px;
+            color: $green;
+            position: absolute;
+            left: 20px;
+            top: 0;
+        }
+    }
+    .icon-comment-o{
+        padding-right: 30px;
+        &::before{
+            top: -2px;
+        }
+    }
+}
+.product__item{
+    &.list{
+        max-width: 100%;
+        .product__item-img{
+            width: 240px;
+            float: left;
+            min-height: 100%;
+        }
+        .product__item-text{
+            display: block;
+            font-size: 14px;
+            color: #70838d;
+            margin-top: 15px;
+            margin-bottom: 5px;
+        }
+        .product__item-price{
+            font-size: 30px;
+            span{
+                display: block;
+                font-size: 13px;
+                color: #aeb4bb;
+                margin-top: 30px;
+            }
+        }
+        .product__item-name{
+            max-width: 480px;
+            display: block;
+        }
+        .product__item-content{
+            padding-top: 23px;
+        }
+        .product__item-list{
+            display: block;
+        }
+        .product__item-start{
+            margin-left: auto;
+            margin-right: 30px;
+        }
+    }
+}
+// end product-page
+
+
 
 @import 'media'
