--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -97,3 +97,15 @@ body{
         }
     }
 }
+.angle-right{
+    position: relative;
+    padding-left: 15px;
+    &::before{
+        position: absolute;
+        content: "\f105";
+        font-family: 'icomoon';
+        left: 0;
+        color: $green;
+        font-size: 14px;
+    }
+}
