--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -32,7 +32,8 @@
     background-color: $green;
 }
 
-.header__btn-register {
+.header__btn-register,
+.header__btn-logout {
     background-color: $red;
     margin-left: 7px;
 }
@@ -57,7 +58,250 @@
         color: #fff;
     }
 }
+.header__circle{
+    &.active{
+        display: block;
+    }
+    display: none;
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    background-color: #f5f5f5;
+    position: relative;
+    &::before{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        color: #a0a0a0;
+        font-size: 14px;
+        transform: translate(-50%,-50%);
+    }
+    span{
+        position: absolute;
+        width: 18px;
+        height: 18px;
+        border-radius: 50%;
+        text-align: center;
+        line-height: 18px;
+        right: -7px;
+        top: -7px;
+        font-size: 11px;
+        color: #fff;
+    }
+}
+.header__btn-login--off{
+    display: none;
+}
+.header__btn-logout{
+    display: none;
+    &.header__btn-login--on{
+        display: block;
+    }
+}
+.header__box{
+    display: flex;
+    align-items: center;
+}
+.notification{
+    span{
+    background-color: $yellow;
+    }
+}
+.basket{
+    span{
+        background-color: $green;
+    }
+}
+.message{
+    span{
+        background-color: $tomato;
+    }
+}
+.user{
+    margin-left: 20px;
+    margin-right: 25px;
+    padding-right: 20px;
+    position: relative;
+    &::before{
+        position: absolute;
+        font-family: 'icomoon' !important;
+        content: "\f107";
+        right: 0;
+        top: 0;
+        font-size: 16px;
+        color: #707070;
+    }
+    &__inner{
+        display: flex;
+        align-items: center;
+    }
+    &__images{
+        margin-right: 15px;
+        width: 34px;
+        height: 34px;
+        overflow: hidden;
+        border-radius: 50%;
+    }
+    &__info{
+        font-size: 14px;
+        font-size: 14px;
+    }
+    &__name{
+        @include f500;
+        color: #222;
+    }
+    &__balance{
+        color: $green;
+        @include f700;
+    }
+}
+.user__box,
+.basket__box,
+.notification__box,
+.message__box{
+    position: relative;
+    margin-top: 40px;
+    height: 90px;
+    margin-right: 5px;
+    &:hover{
+        .user__menu{
+            height: auto;
+            border-width: 1px;
+            padding: 20px;
+            overflow: auto;
+        }
+    }
+}
+.user__menu{
+    top: 69px;
+    left: 20px;
+    border: 0px solid rgb(205,205,205);
+    position: absolute;
+    background-color: #fff;
+    width: 158px;
+    padding: 0 20px;
+    transition: all .3s;
+    height: 0;
+    overflow: hidden;
+    a{
+        font-size: 12px;
+        color: #546e7a;
+        margin-bottom: 15px;
+    }
+}
+.circle__menu{
+    border-top: 1px solid #e0e0e0;
+    position: absolute;
+    top: 62px;
+    right: 0;
+    height: 0;
+    overflow: hidden;
+    transition: all .3s;
+}
+.basket__box,
+.notification__box,
+.message__box{
+    margin-top: 54px;
+    margin-left: 15px;
+    &:hover{
+        .header__circle::before{
+            color: $bg;
+        }
+        .circle__menu{
+            overflow: hidden;
+            height: auto;
+        }
+        .circle__item{
+            padding: 23px;
+            border-width: 1px;
+        }
 
+    }
+}
+.circle__item{
+    padding: 0 23px;
+    border: 0 solid #e0e0e0;
+    border-top:none;
+    background-color: #fff;
+    display: flex;
+    transition: all .3s;
+    align-items: center;
+    position: relative;
+    &::before{
+        position: absolute;
+        top: 27px;
+        right: 28px;
+        color: #b0bec5;
+        font-size: 16px;
+    }
+    width: 269px;
+}
+.circle__images{
+    margin-right: 15px;
+}
+.circle__info-name {
+    @include f500;
+    color: $bg;
+}
+.circle__info-them {
+    font-size: 12px;
+    color: $green;
+}
+.circle__info-price {
+    @include f500;
+    font-size: 16px;
+    color: #000;
+}
+.circle__info-date {
+    font-size: 10px;
+    @include f500;
+    color: #90a4ae;
+}
+.basket__summ{
+    padding: 16px 17px 12px;
+    border: 1px solid #e0e0e0;
+    border-top:none;
+    background-color: #fff;
+}
+.basket__summ-title{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 13px;
+    padding-right: 22px;
+    margin-bottom: 15px;
+    @include f700;
+    color: $bg;
+    font-size: 16px;
+}
+.basket__btn{
+    @include f700;
+    color: #fff;
+    font-size: 14px;
+    padding: 12px 5px;
+    background-color: $green;
+    text-align: center;
+    width: 100px;
+}
+.basket__btn-checkout{
+    width: 120px;
+    background-color: $red;
+
+}
+.notification__menu,
+.message__menu{
+    .circle__images{
+        margin-right: 20px;
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+    }
+    .circle__info{
+        line-height: 18px;
+    }
+}
+.icons-color::before{
+    color: $tomato;
+}
 // end header
 // start search
 .search{
