added product-one page

--- a/app/scss/_mixsins.scss
+++ b/app/scss/_mixsins.scss
@@ -2,6 +2,11 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
 } 
+@mixin f300 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+} 
+
 @mixin f700 {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
