--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1561,13 +1561,15 @@ button.icon-unsorted{
     margin-bottom: 155px;
 }
 .page-404__wrapper,
-.about__wrapper{
+.about__wrapper,
+.contact__wrapper{
     background-color: #fff;
     border: 1px solid #dcdcdc;
     margin-bottom: 15px;
 }
 .page-404__head,
-.about__head{
+.about__head,
+.contact__head{
     font-size: 24px;
     color: #444;
     @include f500;
@@ -1638,4 +1640,115 @@ button.icon-unsorted{
     }
 }
 //end about
+//start contact
+.contact__head{
+    padding-left: 40px;
+    padding-right: 40px;
+}
+.contact__inner{
+    padding: 35px 40px 15px;
+}
+.contact__map{
+    margin-bottom: 50px;
+    height: 415px;
+    iframe{
+        width: 100%;
+        height: 415px;
+    }
+}
+.contact__box{
+    display: flex;
+}
+.contact__info{
+    margin-right: 30px;
+    max-width: 330px;
+    width: 100%;
+}
+.contact__info-item{
+    margin-bottom: 30px;
+}
+.contact__info-title{
+    margin-bottom: 30px;
+    padding-bottom: 20px;
+    position: relative;
+    font-size: 20px;
+    @include f500;
+    padding-left: 40px;
+    color: $bg;
+    margin-bottom: 20px;
+    &::after{
+        position: absolute;
+        content: '';
+        height: 4px;
+        background-color: $green;
+        width: 44px;
+        bottom: 0;
+        left: 40px;
+    }
+    &::before{
+        color: $green;
+        font-size: 24px;
+        position: absolute;
+        left: 0;
+    }
+}
+.contact__info-content{
+    padding-left: 40px;
+    color: #707070;
+    max-width: 230px;
+}
+.contact__form-tile{
+    font-size: 24px;
+    @include f500;
+    margin-bottom: 25px;
+    color: #333;
+}
+.contact__form-row{
+    display: flex;
+    justify-content: space-between;
+
+}
+.contact__form{
+    width: 100%;
+    input{
+        border: none;
+        display: block;
+        height: 43px;
+        margin-bottom: 30px;
+        padding: 0 17px;
+        background-color: #f1f4f5;
+        width: 350px;
+        &::placeholder{
+            color: #7a7a7a;
+            @include f500;
+            font-size: 15px;
+        }
+    }
+    textarea{
+        background-color: #f1f4f5;
+        height: 190px;
+        resize: none;
+        border: none;
+        padding: 13px 17px;
+        display: block;
+        margin-bottom: 23px;
+        width: 100%;
+        &::placeholder{
+            color: #7a7a7a;
+            @include f500;
+            font-size: 15px;
+        }
+    }
+    button{
+        border: none;
+        background-color: $green;
+        @include f700;
+        font-size: 16px;
+        color: #fff;
+        text-transform: uppercase;
+        padding: 20px 25px;
+        width: 190px;
+    }
+}
+//end contact
 @import 'media'
