--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1751,4 +1751,98 @@ button.icon-unsorted{
     }
 }
 //end contact
+//start settings
+.settings{
+    padding-bottom: 100px;
+    .product-one__tabs.settings__tabs{
+        display: flex;
+        .tabs{
+            display: block;
+            max-width: 270px;
+            margin-right: 30px;
+            border: 1px solid #dedede;
+            text-align: left;
+            border-bottom: none;
+            height: 100%;
+            width: 100%;
+            span{
+                display: block;
+                width: 100%;
+                background-color: #fff;
+                border-bottom: 1px solid #dedede;
+                padding: 17px 17px 17px 50px;
+                color: #707070;
+                font-size: 14px;
+                @include f500;
+                &.active{
+                    border-bottom: 2px solid $green;
+                    color: #37474f;
+                    &::before{
+                        color: $green;
+                    }
+                }
+                &::before{
+                    left: 24px;
+                    color: #444;
+                }
+            }
+        }
+        .tabs .tab+.tab{
+            border-left: none;
+        }
+        .tab_content{
+            width: 100%;
+            padding: 0;
+            border: none;
+            background-color: transparent;
+        }
+    }
+}
+.page-box{
+    background-color: #fff;
+    border: 1px solid #dedede;
+}
+.page-box__title{
+    min-height: 100%;
+    padding: 18px 34px;
+    color: #263238;
+    font-size: 24px;
+    @include f500;
+    border-bottom: 1px solid #dedede;
+}
+.page-box__content{
+    padding: 30px 35px 80px;
+}
+.settings__line{
+    margin-bottom: 21px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    label{
+        color: #444;
+        width: 260px;
+    }
+    input{
+        max-width: 540px;
+        width: 100%;
+        border: 1px solid #dedede;
+        color: #000;
+        background-color: #f9f9f9;
+        height: 40px;
+        padding: 0 17px;
+    }
+    select{
+        max-width: 540px;
+        width: 100%;
+        border: 1px solid #dedede;
+        color: #000;
+        background-color: #f9f9f9;
+        height: 40px;
+        padding: 0 17px;
+    }
+}
+//end settings
+
+
+
 @import 'media'
