--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1842,6 +1842,204 @@ button.icon-unsorted{
     }
 }
 //end settings
+//start profile
+.profile__inner{
+    display: flex;
+    margin-bottom: 30px;
+}
+.profile{
+    .aside__item{
+        max-width: 270px;
+        background-color: #fff;
+        padding: 25px;
+        padding-bottom: 40px;
+        border: 1px solid #dedede;
+        margin-bottom: 20px;
+    }
+}
+.profile-status{
+    color: #707070;
+    border: 1px solid #d6d6d6;
+    font-size: 13px;
+    padding: 6px 9px 5px 30px;
+    position: relative;
+    &::before{
+        position: absolute;
+        content: '';
+        left: 11px;
+        width: 9px;
+        height: 9px;
+        top: 13px;
+        border-radius: 50%;
+    }
+}
+.profile__aside{
+    width: 100%;
+    margin-right: 30px;
+    .footer__social-link{
+        margin-bottom: 15px;
+    }
+}
+.profile-on{
+  &::before{
+    background-color: $green;
+  }  
+}
+.profile-off{
+   &::before{
+       background-color: $red;
+   } 
+}
+.profile__aside-btn{
+    margin-bottom: 13px;
+    margin-top: 15px;
+}
+.profile__aside-message {
+    background-color: #546e7a;
+    color: #fff;
+    display: block;
+    font-size: 16px;
+    @include f500;
+    text-align: center;
+    padding: 18px 10px;
+    position: relative;
+    box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+    margin-bottom: 15px;
+    &::before{
+        font-family: 'icomoon';
+        position: absolute;
+        content: '\f003';
+        left: 50px;
+        top: 17px;
+        font-size: 16px;
+    }       
+}
+.following {
+    background-color: $green;
+    color: #fff;
+    display: block;
+    box-shadow: 0px 1px 2px 0px rgba(69, 90, 100, 0.75);
+    font-size: 16px;
+    @include f700;
+    text-align: center;
+    padding: 18px 10px;
+}
+
+.profile__aside{
+    max-width: 270px;
+}
+.profile__banner{
+    padding: 20px;
+    border: 1px solid #ddeedd;
+    background-color: #fff;
+    margin-bottom: 44px;
+}
+.profile__banner-images{
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 332px;
+}
+.profile__content{
+    width: 100%;
+}
+.profile__items {
+    display: flex;
+    border: 1px solid #dedede;
+}
+.profile__item {
+    width: 25px;
+    background-color: #fff;
+    text-align: center;
+    padding: 20px 5px 17px;
+    width: 100%;
+    & + .profile__item{
+        border-left: 1px solid #dedede;
+    }
+}
+.profile__item-title {
+    font-size: 14px;
+    color: $bg;
+    @include f500;
+}
+.profile__item-content {
+    color: #707070;
+    @include f500;
+    font-size: 14px;
+    &.profile__items-sales{
+        color: $bg;
+    }
+}
+.profile-settings{
+     .product-one__tabs.settings__tabs{
+        .tabs span{
+            font-family: 'Roboto', sans-serif !important;
+            font-weight: 500;
+            color: #707070;
+            position: relative;
+            &.active::before{
+                color: $green;
+            }
+            &::before{
+                position: absolute;
+                font-family: 'icomoon';
+                left: 27px;
+                top: 15px;
+                color: #d0d0d0 ;
+                font-size: 14px;
+            }
+        }
+    }
+}
+.personal-box{
+    background-color: #fff;
+    padding: 35px 40px 25px;
+    border: 1px solid #dedede;
+}
+.personal-box__title {
+    font-size: 20px;
+    @include f700;
+    margin-bottom: 25px;
+    color: $bg;
+}
+.personal-box__text {
+    margin-bottom: 20px;
+    p{
+        color: #707070;
+    }
+}
+.personal-box__item-head {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+.personal-box__item-name {
+    @include f500;
+    font-size: 16px;
+    color: $bg;
+    font-style: italic;
+}
+.personal-box__item-number {
+    @include f700;
+    font-size: 16px;
+    color: $bg;
+}
+.personal-box__item-line{
+    background-color: #f4f4f4;
+    height: 15px;
+    border-radius: 3px;
+    margin-bottom: 23px;
+    span{
+        display: block;
+        border-radius: 3px;
+        height: 15px;
+        background-image: url(../images/skill-line.jpg);
+        background-repeat: repeat;
+    }
+}
+
+
+//end profile
 
 
 
